--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "react-expression",
-  "version": "1.0.0",
+  "name": "react-expression-yd",
+  "version": "1.0.1",
   "description": "基于 react 的表达式设置",
+  "private": false,
   "main": "dist/main.js",
   "files": [
     "dist"
@@ -13,7 +14,8 @@
   "scripts": {
     "start": "webpack-dev-server --config webpack.dev.config.js",
     "dev": "webpack-dev-server --config webpack.dev.config.js",
-    "build": "rm -rf dist && webpack --config webpack.prod.config.js"
+    "build": "rm -rf dist && webpack --config webpack.prod.config.js",
+    "bundleAnalyze": "rm -rf dist && webpack --config webpack.prod.config.js --analyze true"
   },
   "keywords": [
     "react",
@@ -48,8 +50,10 @@
     "ts-loader": "7.0.5",
     "typescript": "3.9.5",
     "webpack": "4.29.0",
+    "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "3.2.1",
-    "webpack-dev-server": "3.11.0"
+    "webpack-dev-server": "3.11.0",
+    "webpack-node-externals": "^2.5.2"
   },
   "peerDependencies": {
     "react": ">=16.8.0",
